--- a/Learning C#/Ex_Files_Learning_C_Sharp/C# Notes/10.Inheritance.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/C# Notes/10.Inheritance.md
@@ -83,7 +83,7 @@ Once you perform the Inheritance, class B can take the two members defined in cl
 
 Let us understand one more thing. Please observe the following image. When we say obj. you can see the intelligence it is showing the two Methods i.e. Method1 and Method2. So, the child class can consume the members of the parent class as if it is the owner. Now, if you see the description of either Method1 or Method2, it is showing void A.Method1() and void A.Method2(). That means Method1 or Method2 belongs to class A only. But class B can consume the member as if it is the owner. See, I can drive my father’s car as if I am the owner, but still, the registration name is my father. Similarly, class B can call the methods as the method is it’s own but internally the methods belong to Class A.
 
-[pic](https://dotnettutorials.net/wp-content/uploads/2018/08/word-image-1175-3.png)
+![pic](https://dotnettutorials.net/wp-content/uploads/2018/08/word-image-1175-3.png)
 
 The complete code example is given below. In the below example, class A defined two members, and class B is inherited from Class A. In class B, within the Main method, we created an instance of class B and called the two methods.
 
