--- a/ASP.NET Web API/Notes/0. Intro.md
+++ b/ASP.NET Web API/Notes/0. Intro.md
@@ -9,7 +9,7 @@ These Web API services can be consumed by a variety of clients such as:
 
 The most important thing to keep in mind is that we can develop both Restful and Non-Restful Web Services using the ASP.NET Web API framework. But mostly this framework is used to create RESTful services. In short, this framework does not provide any specific architectural style for creating the services
 
-![pic](//asp.net image url)
+![pic](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/ASP.NET%20Web%20API/Images/AspNetCoreWebApiArchitecture.png)
 
 
 -----
