--- a/ASP.NET Web API/Notes/0. Intro.md
+++ b/ASP.NET Web API/Notes/0. Intro.md
@@ -18,7 +18,7 @@ IOTs stands for Internet Of Things and it is actually a network of physical devi
 
 In other words, we can say, the Internet Of Things (IoT) are the objects or devices which should have an IP address and they can communicate with other Internet-enabled devices and objects over the Internet. Examples of IoT include security systems, thermostats, electronic appliances, cars, etc, in addition to laptops, desktops, and smartphones.
 
-![pic](//iot image url)
+![pic](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/ASP.NET%20Web%20API/Images/IOT_.png)
 
 -----
 ## What is Rest?
