--- a/ASP.NET Web API/Notes/0. Intro.md
+++ b/ASP.NET Web API/Notes/0. Intro.md
@@ -28,7 +28,7 @@ Distributed environment means that the client can be on any platform like Java, 
 The server can also be on any platform Like: Java, .NET, PHP, etc.
 The RST architectural pattern treats each **service as a resource** and client can access those resources by using the **HTTP** Protocol methods such as GET, POST, PUT, PATCH, and DELETE.
 
-![pic](//rest image url)
+![pic](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/ASP.NET%20Web%20API/Images/rest-api.png)
 
 -----
 ## What are HTTP Verbs or HTTP Methods?
@@ -50,6 +50,7 @@ There are some situations where you don’t want to update all the properties of
 
 ### DELETE Method:
 The **DELETE** method is used to delete the resource from the database. That means you are removing or deleting an existing entity from your database. In modern applications, we use two concepts for delete. One is Soft Delete and another one is Hard Delete.
+
 1. **Soft Delete:** In your table, if you have some column like **IsDeleted** or **IsActive** or something similar to this and you just want to update that column then you cannot use **Delete** Method. In that case, you need to use the **PATCH** method. This is because you are not deleting the record from the database, you just update the record.
 2. **Hard Delete:** If you want to remove the existing entity from the table, then you need to use the **DELETE** method. For example, Delete an existing product from the Product table in the database, etc.
 
