--- a/ASP.NET Web API/Notes/0. Intro.md
+++ b/ASP.NET Web API/Notes/0. Intro.md
@@ -56,7 +56,7 @@ The **DELETE** method is used to delete the resource from the database. That mea
 
 There are other **HTTP** Methods available, but these are the most used **HTTP** Methods, we generally used in our applications.
 
-![pic](//http verbs image url)
+![pic](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/ASP.NET%20Web%20API/Images/rest%20http%20verbs.png)
 
 ------
 ## What are the RESTful services?
