--- a/ASP.NET Web API/Notes/0. Intro.md
+++ b/ASP.NET Web API/Notes/0. Intro.md
@@ -115,7 +115,7 @@ So, if we want to expose our data (business data) to the browsers as well as to 
 
 The ASP.NET WEB API is a great framework for building HTTP services that can be consumed by a broad range of clients including browsers, mobiles, iPhones, and tablets. 
 
-![pic](//wcf vs rest image url)
+![pic](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/ASP.NET%20Web%20API/Images/wcf-vs-web-api.png)
 
 -------
 ## What are the differences between ASP.NET MVC and ASP.NET Web API?
