--- a/EntityFrameworkCore/2. Razor Pages with EF Core.md
+++ b/EntityFrameworkCore/2. Razor Pages with EF Core.md
@@ -11,26 +11,26 @@
 ## The sample app.
 The app built in these tutorials is a basic university web site. Users can view and update student, course, and instructor information. Here are a few of the screens created in the tutorial.
 
-![pic1]()
+![pic1](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/EntityFrameworkCore/images/pic1.png)
 
-![pic2]()
+![pic2](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/EntityFrameworkCore/images/pic2.png)
 
 The UI style of this site is based on the built-in project templates. The tutorial's focus is how to use EF Core with ASP.NET Core, not how to customize the UI.
 
 ## Create the web app project.
 1. Start Visual Studio 2022 and select **Create a new project**
 
-![pic3]()
+![pic3](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/EntityFrameworkCore/images/pic3.png)
 
 2. In the **Create a new project** dialog, select **ASP.NET Core Web APP**, and then select **Next**.
 
-![pic4]()
+![pic4](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/EntityFrameworkCore/images/pic4.png)
 
 3. In the **Configure your new project** dialog, enter `ContosoUniversity` for **Project name**. It's important to name the project ContosoUniversity, including matching the capitalization, so the namespaces will match when you copy and paste example code.
 4. Select **Next**.
 5. In the **Additional information** dialog, select **.NET 6.0 (LTS)** and then select **Create**.
 
-![pic5]()
+![pic5](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/EntityFrameworkCore/images/pic5.png)
 
 ### Set up the site style.
 Copy and paste the following code into the `Pages/Shared/_Layout.cshtml` file:
@@ -40,72 +40,60 @@ Copy and paste the following code into the `Pages/Shared/_Layout.cshtml` file:
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>@ViewData["Title"] - Contoso University</title>
-<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-<link rel="stylesheet" href="~/css/site.css" asp-append-version="true"
-/>
-<link rel="stylesheet" href="~/ContosoUniversity.styles.css" asp-append-
-version="true" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Contoso University</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/ContosoUniversity.styles.css" asp-append-version="true" />
 </head>
 <body>
-<header>
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-
-light bg-white border-bottom box-shadow mb-3">
-<div class="container">
-<a class="navbar-brand" asp-area="" asp-
-page="/Index">Contoso University</a>
-<button class="navbar-toggler" type="button" data-bs-
-toggle="collapse" data-bs-target=".navbar-collapse" aria-
-controls="navbarSupportedContent"
-aria-expanded="false" aria-label="Toggle
-navigation">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="navbar-collapse collapse d-sm-inline-flex
-justify-content-between">
-<ul class="navbar-nav flex-grow-1">
-<li class="nav-item">
-<a class="nav-link text-dark" asp-area="" asp-
-page="/About">About</a>
-</li>
-<li class="nav-item">
-<a class="nav-link text-dark" asp-area="" asp-
-page="/Students/Index">Students</a>
-</li>
-<li class="nav-item">
-<a class="nav-link text-dark" asp-area="" asp-
-page="/Courses/Index">Courses</a>
-</li>
-<li class="nav-item">
-<a class="nav-link text-dark" asp-area="" asp-
-page="/Instructors/Index">Instructors</a>
-</li>
-<li class="nav-item">
-<a class="nav-link text-dark" asp-area="" asp-
-page="/Departments/Index">Departments</a>
-</li>
-</ul>
-</div>
-</div>
-</nav>
-</header>
-<div class="container">
-<main role="main" class="pb-3">
-@RenderBody()
-</main>
-</div>
-<footer class="border-top footer text-muted">
-<div class="container">
-&copy; 2021 - Contoso University - <a asp-area="" asp-
-page="/Privacy">Privacy</a>
-</div>
-</footer>
-<script src="~/lib/jquery/dist/jquery.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-<script src="~/js/site.js" asp-append-version="true"></script>
-@await RenderSectionAsync("Scripts", required: false)
-</body>
+  <header>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+      <div class="container">
+        <a class="navbar-brand" asp-area="" asp-page="/Index">Contoso University</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+          <ul class="navbar-nav flex-grow-1">
+            <li class="nav-item">
+              <a class="nav-link text-dark" asp-area="" asp-page="/About">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" asp-area="" asp-page="/Students/Index">Students</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" asp-area="" asp-page="/Courses/Index">Courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" asp-area="" asp-page="/Instructors/Index">Instructors</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">Departments</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <div class="container">
+    <main role="main" class="pb-3">
+      @RenderBody()
+    </main>
+  </div>
+
+  <footer class="border-top footer text-muted">
+    <div class="container">
+      &copy; 2021 - Contoso University - <a asp-area="" asp-page="/Privacy">Privacy</a>
+    </div>
+  </footer>
+
+  <script src="~/lib/jquery/dist/jquery.js"></script>
+  <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+  <script src="~/js/site.js" asp-append-version="true"></script>
+
+  @await RenderSectionAsync("Scripts", required: false)
+  </body>
 </html>
 ```
 The layout files sets the site *header*, *footer*, and *menu*. The preceding code makes the following changes:
@@ -122,47 +110,16 @@ In `Pages/Index.cshtml`, replace the contents of the file with the following cod
 ViewData["Title"] = "Home page";
 }
 <div class="row mb-auto">
-<div class="col-md-4">
-<div class="row no-gutters border mb-4">
-<div class="col p-4 mb-4 ">
-<p class="card-text">
-Contoso University is a sample application that
-demonstrates how to use Entity Framework Core in an
-ASP.NET Core Razor Pages web app.
-</p>
-</div>
-</div>
-</div>
-<div class="col-md-4">
-<div class="row no-gutters border mb-4">
-<div class="col p-4 d-flex flex-column position-static">
-<p class="card-text mb-auto">
-You can build the application by following the steps in
-a series of tutorials.
-</p>
-<p>
-@* <a
-href="https://docs.microsoft.com/aspnet/core/data/ef-rp/intro"
-class="stretched-link">See the tutorial</a>
-*@ </p>
-</div>
-</div>
-</div>
-<div class="col-md-4">
-<div class="row no-gutters border mb-4">
-<div class="col p-4 d-flex flex-column">
-<p class="card-text mb-auto">
-You can download the completed project from GitHub.
-</p>
-<p>
-@* <a
-href="https://github.com/dotnet/AspNetCore.Docs/tree/main/aspnetcore/data/ef
--rp/intro/samples" class="stretched-link">See project source code</a>
-*@ </p>
-</div>
-</div>
-</div>
-</div>
+  <div class="col-md-4">
+    <div class="row no-gutters border mb-4">
+      <div class="col p-4 mb-4 ">
+        <p class="card-text">
+          Contoso University is a sample application that demonstrates how to use Entity Framework Core in an ASP.NET Core Razor Pages web app.
+        </p>
+      </div>
+    </div>
+  </div>
+
 ```
 The preceding code replaces the text about ASP.NET Core with text about this app.
 Run the app to verify that the home page appears.
@@ -170,6 +127,6 @@ Run the app to verify that the home page appears.
 ## The Data Model
 The following sections create a data model:
 
-![pic](pic6)
+![pic](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/EntityFrameworkCore/images/pic6.png)
 
 A student can enroll in any number of courses, and a course can have any number of students enrolled in it.
