Update 3. Entities of your Models.md

--- a/EntityFrameworkCore/3. Entities of your Models.md
+++ b/EntityFrameworkCore/3. Entities of your Models.md
@@ -1,6 +1,6 @@
 # The Student entity.
 
-![pic](image7)
+![pic](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/EntityFrameworkCore/images/pic7.png)
 
 * Create a *Models* folder in the project folder.
 * Create `Models/Student.cs` with the below code:
@@ -32,7 +32,7 @@ The `Enrollment` property is defined as `ICollection<Enrollment>` because there 
 
 # The Enrollment entity.
 
-![pic](image8)
+![pic](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/EntityFrameworkCore/images/pic8.png)
 
 Create `Models/Enrollment.cs` with the following code:
 
@@ -72,7 +72,7 @@ EF Core interprets a property as a foreign key if it's named `<navigation proper
 
 # The Course entity.
 
-![pic](image9)
+![pic](https://github.com/MinenhleNkosi/Road_to_CSharp_Mastery/blob/main/EntityFrameworkCore/images/pic9.png)
 
 Create `Models/Course.cs` with the following code:
 
