--- a/Learning C#/Ex_Files_Learning_C_Sharp/C# Notes/1.C#_Intro.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/C# Notes/1.C#_Intro.md
@@ -92,7 +92,7 @@ Now let us look at the elements of the flow chart. The following image shows the
 *Step 5:* Display Sum.
 *Step 6:* Stop.
 
-==================================================================================================================================================
+===================================================================================================
 
 # Introduction to .NET Framework
 As a C#/.NET developer it's important to know the history behind the evolution of DOT NET Framework. Beofre DOT NET, there was COM.
@@ -182,12 +182,12 @@ Technologies supported by the .NET framework are as follows:
 7. **LINQ** (Language Integrated Query)
 8. **Entity** Framework
 
-## What are a Language and its need?
+## What is a Language and its need?
 1. Language acts as the mediator between the programmer and the system.
 2. It offers some rules and regulations for writing the program.
 3. The language also offers some libraries which are required for writing the program.
 
-## What are Technology and its Needs?
+## What is Technology and its Needs?
 Technology is always designed for a particular purpose. For example, the development of web-related applications in .NET using the technology ASP.NET. But the technology does not offer any specific rules for writing the programs. That’s why technology can’t be implemented individually. VB.NET, C#.NET, and F#.NET are programming languages. Using any of these languages we can implement windows/desktop applications individually. Every language is having its own compiler
 
 ![pic](https://dotnettutorials.net/wp-content/uploads/2022/07/dotnet-framework-compilers-and-their-extensions.png)
